[package]
name = "foundations"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/foundations"

[lib]
name = "foundations"
path = "lib.rs"

[features]
xor = []
now = []
timestamp = []
usize-casting = []
map-util = []
byterepr = []
bytes-read = []
num-compress = []
case-convert = []
const-bytes-equal = []
key-index = []
key-index-map = ["key-index"]

num-compress-macros = []
concat-string = []
vec-ext = []
error-enum = []
num-enum = []
byterepr-macros = ["byterepr"]

const-concat = []

default = []
