[package]
name = "foundations"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/foundations"

[lib]
name = "foundations"
path = "lib.rs"

[features]
alloc = []
std = ["alloc"]

xor = []
now = ["std"]
timestamp = []
usize-casting = []
map-util = ["std"]
byterepr = []
bytes-read = []
num-compress = []
case-convert = ["alloc"]
const-bytes-equal = []
key-index = ["std"]
key-index-map = ["key-index"]
fs = ["std"]

num-compress-macros = []
concat-string = []
vec-ext = []
error-enum = []
num-enum = []
byterepr-macros = ["byterepr"]

const-concat = []

default = []
